add bottom sheet modal for choose pool card

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -121,6 +121,9 @@
   "swap.swapScreen.assetsIn": "This assets is in my portfolio",
   "swap.swapScreen.defaultSlippage": "Default Slippage Tolerance",
   "swap.swapScreen.slippageInfo": "Slippage tolerance is set as a percentage of the total swap value. Your transactions will not be executed if the price moves by more than this amount.",
+  "swap.swapScreen.swapMinAda": "Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
+  "swap.swapScreen.swapFees": "Swap fees include the following: • Matchmaker Fee • Frontend Fee • Liquidity Provider Fee",
+  "swap.swapScreen.swapMinReceived": "Minimum amount of tokens you can get because of the slippage tolerance.",
   "swap.swapScreen.enterSlippage": "Enter a value from 0% to 100%. You can also enter up to 1 decimal",
   "components.common.navigation.nftGallery": "NFT Gallery",
   "components.receive.addressmodal.BIP32path": "Derivation path",
