added confirmation mock screen for orders

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -536,6 +536,7 @@
   "global.cancel": "Cancel",
   "global.close": "close",
   "global.clear": "clear",
+  "global.confirmationTransaction": "Confirmation transaction",
   "global.comingSoon": "Coming soon",
   "global.currency": "Currency",
   "global.currency.ADA": "Cardano",
