--- a/apps/wallet-mobile/translations/messages/src/TxHistory/TxHistoryNavigator.json
+++ b/apps/wallet-mobile/translations/messages/src/TxHistory/TxHistoryNavigator.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Receive",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 216,
+      "line": 245,
       "column": 16,
-      "index": 7213
+      "index": 8193
     },
     "end": {
-      "line": 219,
+      "line": 248,
       "column": 3,
-      "index": 7302
+      "index": 8282
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 220,
+      "line": 249,
       "column": 13,
-      "index": 7317
+      "index": 8297
     },
     "end": {
-      "line": 223,
+      "line": 252,
       "column": 3,
-      "index": 7390
+      "index": 8370
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 224,
+      "line": 253,
       "column": 17,
-      "index": 7409
+      "index": 8389
     },
     "end": {
-      "line": 227,
+      "line": 256,
       "column": 3,
-      "index": 7486
+      "index": 8466
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 228,
+      "line": 257,
       "column": 15,
-      "index": 7503
+      "index": 8483
     },
     "end": {
-      "line": 231,
+      "line": 260,
       "column": 3,
-      "index": 7576
+      "index": 8556
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 232,
+      "line": 261,
       "column": 21,
-      "index": 7599
+      "index": 8579
     },
     "end": {
-      "line": 235,
+      "line": 264,
       "column": 3,
-      "index": 7694
+      "index": 8674
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Select pool",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 236,
+      "line": 265,
       "column": 14,
-      "index": 7710
+      "index": 8690
     },
     "end": {
-      "line": 239,
+      "line": 268,
       "column": 3,
-      "index": 7791
+      "index": 8771
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Send",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 240,
+      "line": 269,
       "column": 13,
-      "index": 7806
+      "index": 8786
     },
     "end": {
-      "line": 243,
+      "line": 272,
       "column": 3,
-      "index": 7886
+      "index": 8866
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Scan QR code address",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 244,
+      "line": 273,
       "column": 18,
-      "index": 7906
+      "index": 8886
     },
     "end": {
-      "line": 247,
+      "line": 276,
       "column": 3,
-      "index": 8007
+      "index": 8987
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 248,
+      "line": 277,
       "column": 20,
-      "index": 8029
+      "index": 9009
     },
     "end": {
-      "line": 251,
+      "line": 280,
       "column": 3,
-      "index": 8118
+      "index": 9098
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Selected tokens",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 252,
+      "line": 281,
       "column": 26,
-      "index": 8146
+      "index": 9126
     },
     "end": {
-      "line": 255,
+      "line": 284,
       "column": 3,
-      "index": 8250
+      "index": 9230
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Edit amount",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 256,
+      "line": 285,
       "column": 19,
-      "index": 8271
+      "index": 9251
     },
     "end": {
-      "line": 259,
+      "line": 288,
       "column": 3,
-      "index": 8364
+      "index": 9344
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 260,
+      "line": 289,
       "column": 16,
-      "index": 8382
+      "index": 9362
     },
     "end": {
-      "line": 263,
+      "line": 292,
       "column": 3,
-      "index": 8468
+      "index": 9448
     }
   },
   {
@@ -184,14 +184,29 @@
     "defaultMessage": "!!!Share this address to receive payments. To protect your privacy, new addresses are generated automatically once you use them.",
     "file": "src/TxHistory/TxHistoryNavigator.tsx",
     "start": {
-      "line": 264,
+      "line": 293,
       "column": 19,
-      "index": 8489
+      "index": 9469
     },
     "end": {
-      "line": 270,
+      "line": 299,
       "column": 3,
-      "index": 8727
+      "index": 9707
+    }
+  },
+  {
+    "id": "global.confirmationTransaction",
+    "defaultMessage": "!!!Confirmation transaction",
+    "file": "src/TxHistory/TxHistoryNavigator.tsx",
+    "start": {
+      "line": 300,
+      "column": 27,
+      "index": 9736
+    },
+    "end": {
+      "line": 303,
+      "column": 3,
+      "index": 9834
     }
   }
 ]
