--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 49,
+      "line": 50,
       "column": 13,
-      "index": 2262
+      "index": 2313
     },
     "end": {
-      "line": 52,
+      "line": 53,
       "column": 3,
-      "index": 2335
+      "index": 2386
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 53,
+      "line": 54,
       "column": 13,
-      "index": 2350
+      "index": 2401
     },
     "end": {
-      "line": 56,
+      "line": 57,
       "column": 3,
-      "index": 2432
+      "index": 2483
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 57,
+      "line": 58,
       "column": 13,
-      "index": 2447
+      "index": 2498
     },
     "end": {
-      "line": 60,
+      "line": 61,
       "column": 3,
-      "index": 2526
+      "index": 2577
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 61,
+      "line": 62,
       "column": 16,
-      "index": 2544
+      "index": 2595
     },
     "end": {
-      "line": 64,
+      "line": 65,
       "column": 3,
-      "index": 2629
+      "index": 2680
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 65,
+      "line": 66,
       "column": 15,
-      "index": 2646
+      "index": 2697
     },
     "end": {
-      "line": 68,
+      "line": 69,
       "column": 3,
-      "index": 2722
+      "index": 2773
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 70,
       "column": 12,
-      "index": 2736
+      "index": 2787
     },
     "end": {
-      "line": 72,
+      "line": 73,
       "column": 3,
-      "index": 2813
+      "index": 2864
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 74,
       "column": 10,
-      "index": 2825
+      "index": 2876
     },
     "end": {
-      "line": 76,
+      "line": 77,
       "column": 3,
-      "index": 2898
+      "index": 2949
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 78,
       "column": 18,
-      "index": 2918
+      "index": 2969
     },
     "end": {
-      "line": 80,
+      "line": 81,
       "column": 3,
-      "index": 3007
+      "index": 3058
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 81,
+      "line": 82,
       "column": 15,
-      "index": 3024
+      "index": 3075
     },
     "end": {
-      "line": 84,
+      "line": 85,
       "column": 3,
-      "index": 3107
+      "index": 3158
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 86,
       "column": 15,
-      "index": 3124
+      "index": 3175
     },
     "end": {
-      "line": 88,
+      "line": 89,
       "column": 3,
-      "index": 3207
+      "index": 3258
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 90,
       "column": 21,
-      "index": 3230
+      "index": 3281
     },
     "end": {
-      "line": 92,
+      "line": 93,
       "column": 3,
-      "index": 3325
+      "index": 3376
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 94,
       "column": 25,
-      "index": 3352
+      "index": 3403
     },
     "end": {
-      "line": 96,
+      "line": 97,
       "column": 3,
-      "index": 3456
+      "index": 3507
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Verified by MuesliSwap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 98,
       "column": 14,
-      "index": 3472
+      "index": 3523
     },
     "end": {
-      "line": 100,
+      "line": 101,
       "column": 3,
-      "index": 3564
+      "index": 3615
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 101,
+      "line": 102,
       "column": 12,
-      "index": 3578
+      "index": 3629
     },
     "end": {
-      "line": 104,
+      "line": 105,
       "column": 3,
-      "index": 3676
+      "index": 3727
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 105,
+      "line": 106,
       "column": 19,
-      "index": 3697
+      "index": 3748
     },
     "end": {
-      "line": 108,
+      "line": 109,
       "column": 3,
-      "index": 3798
+      "index": 3849
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 109,
+      "line": 110,
       "column": 16,
-      "index": 3816
+      "index": 3867
     },
     "end": {
-      "line": 112,
+      "line": 113,
       "column": 3,
-      "index": 3954
+      "index": 4005
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 113,
+      "line": 114,
       "column": 14,
-      "index": 3970
+      "index": 4021
     },
     "end": {
-      "line": 117,
+      "line": 118,
       "column": 3,
-      "index": 4151
+      "index": 4202
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n   • Matchmaker Fee\n   • Frontend Fee\n   • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 118,
+      "line": 119,
       "column": 12,
-      "index": 4165
+      "index": 4216
     },
     "end": {
-      "line": 124,
+      "line": 125,
       "column": 3,
-      "index": 4331
+      "index": 4382
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 125,
+      "line": 126,
       "column": 19,
-      "index": 4352
+      "index": 4403
     },
     "end": {
-      "line": 128,
+      "line": 129,
       "column": 3,
-      "index": 4498
+      "index": 4549
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 129,
+      "line": 130,
       "column": 17,
-      "index": 4517
+      "index": 4568
     },
     "end": {
-      "line": 132,
+      "line": 133,
       "column": 3,
-      "index": 4655
+      "index": 4706
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 133,
+      "line": 134,
       "column": 14,
-      "index": 4671
+      "index": 4722
     },
     "end": {
-      "line": 136,
+      "line": 137,
       "column": 3,
-      "index": 4752
+      "index": 4803
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 137,
+      "line": 138,
       "column": 19,
-      "index": 4773
+      "index": 4824
     },
     "end": {
-      "line": 140,
+      "line": 141,
       "column": 3,
-      "index": 4864
+      "index": 4915
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 141,
+      "line": 142,
       "column": 9,
-      "index": 4875
+      "index": 4926
     },
     "end": {
-      "line": 144,
+      "line": 145,
       "column": 3,
-      "index": 4948
+      "index": 4999
     }
   },
   {
@@ -349,14 +349,14 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 145,
+      "line": 146,
       "column": 9,
-      "index": 4959
+      "index": 5010
     },
     "end": {
-      "line": 148,
+      "line": 149,
       "column": 3,
-      "index": 5020
+      "index": 5071
     }
   },
   {
@@ -364,14 +364,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 149,
+      "line": 150,
       "column": 14,
-      "index": 5036
+      "index": 5087
     },
     "end": {
-      "line": 152,
+      "line": 153,
       "column": 3,
-      "index": 5095
+      "index": 5146
     }
   },
   {
@@ -379,14 +379,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 155,
+      "line": 156,
       "column": 11,
-      "index": 5154
+      "index": 5205
     },
     "end": {
-      "line": 158,
+      "line": 159,
       "column": 3,
-      "index": 5249
+      "index": 5300
     }
   },
   {
@@ -394,14 +394,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 159,
+      "line": 160,
       "column": 12,
-      "index": 5263
+      "index": 5314
     },
     "end": {
-      "line": 162,
+      "line": 163,
       "column": 3,
-      "index": 5366
+      "index": 5417
     }
   },
   {
@@ -409,14 +409,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 163,
+      "line": 164,
       "column": 9,
-      "index": 5377
+      "index": 5428
     },
     "end": {
-      "line": 166,
+      "line": 167,
       "column": 3,
-      "index": 5467
+      "index": 5518
     }
   },
   {
@@ -424,14 +424,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 167,
+      "line": 168,
       "column": 16,
-      "index": 5485
+      "index": 5536
     },
     "end": {
-      "line": 170,
+      "line": 171,
       "column": 3,
-      "index": 5581
+      "index": 5632
     }
   },
   {
@@ -439,14 +439,29 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 171,
+      "line": 172,
       "column": 20,
-      "index": 5603
+      "index": 5654
     },
     "end": {
-      "line": 174,
+      "line": 175,
       "column": 3,
-      "index": 5692
+      "index": 5743
+    }
+  },
+  {
+    "id": "components.send.confirmscreen.confirmButton",
+    "defaultMessage": "!!!Confirm",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 176,
+      "column": 11,
+      "index": 5756
+    },
+    "end": {
+      "line": 179,
+      "column": 3,
+      "index": 5850
     }
   }
 ]
