added confirmation modal

--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -536,6 +536,10 @@
   "global.cancel": "Cancel",
   "global.close": "close",
   "global.clear": "clear",
+  "global.signTransaction": "Sign transaction",
+  "global.sign": "sign",
+  "global.spendingPassword": "Spending Password",
+  "global.enterSpendingPassword": "Enter spending password to sign this transaction",
   "global.confirmationTransaction": "Confirmation transaction",
   "global.comingSoon": "Coming soon",
   "global.currency": "Currency",
