--- a/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Swap/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 50,
+      "line": 53,
       "column": 13,
-      "index": 2313
+      "index": 2559
     },
     "end": {
-      "line": 53,
+      "line": 56,
       "column": 3,
-      "index": 2386
+      "index": 2632
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Token swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 54,
+      "line": 57,
       "column": 13,
-      "index": 2401
+      "index": 2647
     },
     "end": {
-      "line": 57,
+      "line": 60,
       "column": 3,
-      "index": 2483
+      "index": 2729
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 58,
+      "line": 61,
       "column": 13,
-      "index": 2498
+      "index": 2744
     },
     "end": {
-      "line": 61,
+      "line": 64,
       "column": 3,
-      "index": 2577
+      "index": 2823
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Market Button",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 62,
+      "line": 65,
       "column": 16,
-      "index": 2595
+      "index": 2841
     },
     "end": {
-      "line": 65,
+      "line": 68,
       "column": 3,
-      "index": 2680
+      "index": 2926
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Limit",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 66,
+      "line": 69,
       "column": 15,
-      "index": 2697
+      "index": 2943
     },
     "end": {
-      "line": 69,
+      "line": 72,
       "column": 3,
-      "index": 2773
+      "index": 3019
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Swap from",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 70,
+      "line": 73,
       "column": 12,
-      "index": 2787
+      "index": 3033
     },
     "end": {
-      "line": 73,
+      "line": 76,
       "column": 3,
-      "index": 2864
+      "index": 3110
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Swap to",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 74,
+      "line": 77,
       "column": 10,
-      "index": 2876
+      "index": 3122
     },
     "end": {
-      "line": 77,
+      "line": 80,
       "column": 3,
-      "index": 2949
+      "index": 3195
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Current Balance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 78,
+      "line": 81,
       "column": 18,
-      "index": 2969
+      "index": 3215
     },
     "end": {
-      "line": 81,
+      "line": 84,
       "column": 3,
-      "index": 3058
+      "index": 3304
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Select Token",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 82,
+      "line": 85,
       "column": 15,
-      "index": 3075
+      "index": 3321
     },
     "end": {
-      "line": 85,
+      "line": 88,
       "column": 3,
-      "index": 3158
+      "index": 3404
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Market Price",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 86,
+      "line": 89,
       "column": 15,
-      "index": 3175
+      "index": 3421
     },
     "end": {
-      "line": 89,
+      "line": 92,
       "column": 3,
-      "index": 3258
+      "index": 3504
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 90,
+      "line": 93,
       "column": 21,
-      "index": 3281
+      "index": 3527
     },
     "end": {
-      "line": 93,
+      "line": 96,
       "column": 3,
-      "index": 3376
+      "index": 3622
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Slippage Tolerance Info",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 94,
+      "line": 97,
       "column": 25,
-      "index": 3403
+      "index": 3649
     },
     "end": {
-      "line": 97,
+      "line": 100,
       "column": 3,
-      "index": 3507
+      "index": 3753
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Verified by MuesliSwap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 98,
+      "line": 101,
       "column": 14,
-      "index": 3523
+      "index": 3769
     },
     "end": {
-      "line": 101,
+      "line": 104,
       "column": 3,
-      "index": 3615
+      "index": 3861
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!This assets is in my portfolio",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 102,
+      "line": 105,
       "column": 12,
-      "index": 3629
+      "index": 3875
     },
     "end": {
-      "line": 105,
+      "line": 108,
       "column": 3,
-      "index": 3727
+      "index": 3973
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!Default Slippage Tolerance",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 106,
+      "line": 109,
       "column": 19,
-      "index": 3748
+      "index": 3994
     },
     "end": {
-      "line": 109,
+      "line": 112,
       "column": 3,
-      "index": 3849
+      "index": 4095
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Slippage tolerance is set as a percentage of the total swap value.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 110,
+      "line": 113,
       "column": 16,
-      "index": 3867
+      "index": 4113
     },
     "end": {
-      "line": 113,
+      "line": 116,
       "column": 3,
-      "index": 4005
+      "index": 4251
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!Min-ADA is the minimum ADA amount required to be contained when holding or sending Cardano native tokens.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 114,
+      "line": 117,
       "column": 14,
-      "index": 4021
+      "index": 4267
     },
     "end": {
-      "line": 118,
+      "line": 121,
       "column": 3,
-      "index": 4202
+      "index": 4448
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Swap fees include the following:\n   • Matchmaker Fee\n   • Frontend Fee\n   • Liquidity Provider Fee",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 119,
+      "line": 122,
       "column": 12,
-      "index": 4216
+      "index": 4462
     },
     "end": {
-      "line": 125,
+      "line": 128,
       "column": 3,
-      "index": 4382
+      "index": 4628
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Minimum amount of tokens you can get because of the slippage tolerance.",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 126,
+      "line": 129,
       "column": 19,
-      "index": 4403
+      "index": 4649
     },
     "end": {
-      "line": 129,
+      "line": 132,
       "column": 3,
-      "index": 4549
+      "index": 4795
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!Enter a value from 0% to 100%. You can also enter up to 1 decimal",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 130,
+      "line": 133,
       "column": 17,
-      "index": 4568
+      "index": 4814
     },
     "end": {
-      "line": 133,
+      "line": 136,
       "column": 3,
-      "index": 4706
+      "index": 4952
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Open orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 134,
+      "line": 137,
       "column": 14,
-      "index": 4722
+      "index": 4968
     },
     "end": {
-      "line": 137,
+      "line": 140,
       "column": 3,
-      "index": 4803
+      "index": 5049
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Completed orders",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 138,
+      "line": 141,
       "column": 19,
-      "index": 4824
+      "index": 5070
     },
     "end": {
-      "line": 141,
+      "line": 144,
       "column": 3,
-      "index": 4915
+      "index": 5161
     }
   },
   {
@@ -334,14 +334,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 142,
+      "line": 145,
       "column": 9,
-      "index": 4926
+      "index": 5172
     },
     "end": {
-      "line": 145,
+      "line": 148,
       "column": 3,
-      "index": 4999
+      "index": 5245
     }
   },
   {
@@ -349,14 +349,74 @@
     "defaultMessage": "!!!Clear",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 146,
+      "line": 149,
       "column": 9,
-      "index": 5010
+      "index": 5256
     },
     "end": {
-      "line": 149,
+      "line": 152,
       "column": 3,
-      "index": 5071
+      "index": 5317
+    }
+  },
+  {
+    "id": "global.signTransaction",
+    "defaultMessage": "!!!Sign transaction",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 153,
+      "column": 19,
+      "index": 5338
+    },
+    "end": {
+      "line": 156,
+      "column": 3,
+      "index": 5420
+    }
+  },
+  {
+    "id": "global.spendingPassword",
+    "defaultMessage": "!!!Spending Password",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 157,
+      "column": 20,
+      "index": 5442
+    },
+    "end": {
+      "line": 160,
+      "column": 3,
+      "index": 5526
+    }
+  },
+  {
+    "id": "global.enterSpendingPassword",
+    "defaultMessage": "!!!Enter spending password to sign this transaction",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 161,
+      "column": 25,
+      "index": 5553
+    },
+    "end": {
+      "line": 164,
+      "column": 3,
+      "index": 5673
+    }
+  },
+  {
+    "id": "global.sign",
+    "defaultMessage": "!!!Sign",
+    "file": "src/features/Swap/common/strings.ts",
+    "start": {
+      "line": 165,
+      "column": 8,
+      "index": 5683
+    },
+    "end": {
+      "line": 168,
+      "column": 3,
+      "index": 5742
     }
   },
   {
@@ -364,14 +424,14 @@
     "defaultMessage": "!!!Swap",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 150,
+      "line": 169,
       "column": 14,
-      "index": 5087
+      "index": 5758
     },
     "end": {
-      "line": 153,
+      "line": 172,
       "column": 3,
-      "index": 5146
+      "index": 5817
     }
   },
   {
@@ -379,14 +439,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 156,
+      "line": 175,
       "column": 11,
-      "index": 5205
+      "index": 5876
     },
     "end": {
-      "line": 159,
+      "line": 178,
       "column": 3,
-      "index": 5300
+      "index": 5971
     }
   },
   {
@@ -394,14 +454,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 160,
+      "line": 179,
       "column": 12,
-      "index": 5314
+      "index": 5985
     },
     "end": {
-      "line": 163,
+      "line": 182,
       "column": 3,
-      "index": 5417
+      "index": 6088
     }
   },
   {
@@ -409,14 +469,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 164,
+      "line": 183,
       "column": 9,
-      "index": 5428
+      "index": 6099
     },
     "end": {
-      "line": 167,
+      "line": 186,
       "column": 3,
-      "index": 5518
+      "index": 6189
     }
   },
   {
@@ -424,14 +484,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 168,
+      "line": 187,
       "column": 16,
-      "index": 5536
+      "index": 6207
     },
     "end": {
-      "line": 171,
+      "line": 190,
       "column": 3,
-      "index": 5632
+      "index": 6303
     }
   },
   {
@@ -439,14 +499,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 172,
+      "line": 191,
       "column": 20,
-      "index": 5654
+      "index": 6325
     },
     "end": {
-      "line": 175,
+      "line": 194,
       "column": 3,
-      "index": 5743
+      "index": 6414
     }
   },
   {
@@ -454,14 +514,14 @@
     "defaultMessage": "!!!Confirm",
     "file": "src/features/Swap/common/strings.ts",
     "start": {
-      "line": 176,
+      "line": 195,
       "column": 11,
-      "index": 5756
+      "index": 6427
     },
     "end": {
-      "line": 179,
+      "line": 198,
       "column": 3,
-      "index": 5850
+      "index": 6521
     }
   }
 ]
