Revert "Merge branch 'develop' into production"
This reverts commit f58cf0d8e25dc3e9bcb2235333763ba19e7172d6, reversing
changes made to d67eed8ef7ccc3b6ac07b036190c2861461e2c24.

--- a/apps/wallet-mobile/src/i18n/locales/el-GR.json
+++ b/apps/wallet-mobile/src/i18n/locales/el-GR.json
@@ -32,15 +32,15 @@
   "components.common.navigation.transactionsButton": "Transactions",
   "components.delegation.delegationnavigationbuttons.stakingCenterButton": "Go to Staking Center",
   "components.delegation.withdrawaldialog.deregisterButton": "Deregister",
-  "components.delegation.withdrawaldialog.explanation1": "When **withdrawing rewards**, you also have the option to deregister the staking key.",
-  "components.delegation.withdrawaldialog.explanation2": "**Keeping the staking key** will allow you to withdraw the rewards, but continue delegating to the same pool.",
-  "components.delegation.withdrawaldialog.explanation3": "**Deregistering the staking key** will give you back your deposit and undelegate the key from any pool.",
+  "components.delegation.withdrawaldialog.explanation1": "When withdrawing rewards, you also have the option to deregister the staking key.",
+  "components.delegation.withdrawaldialog.explanation2": "Keeping the staking key will allow you to withdraw the rewards, but continue delegating to the same pool.",
+  "components.delegation.withdrawaldialog.explanation3": "Deregistering the staking key will give you back your deposit and undelegate the key from any pool.",
   "components.delegation.withdrawaldialog.keepButton": "Keep registered",
   "components.delegation.withdrawaldialog.warning1": "You do NOT need to deregister to delegate to a different stake pool. You can change your delegation preference at any time.",
   "components.delegation.withdrawaldialog.warning2": "You should NOT deregister if this staking key is used as a stake pool's reward account, as this will cause all pool operator rewards to be sent back to the reserve.",
   "components.delegation.withdrawaldialog.warning3": "Deregistering means this key will no longer receive rewards until you re-register the staking key (usually by delegating to a pool again)",
   "components.delegation.withdrawaldialog.warningModalTitle": "Also deregister staking key?",
-  "components.delegationsummary.delegatedStakepoolInfo.copied": "Copied!",
+  "components.delegationsummary.delegatedStakepoolInfo.copied": "Αντιγράφηκε!",
   "components.delegationsummary.delegatedStakepoolInfo.fullDescriptionButtonLabel": "Go to website",
   "components.delegationsummary.delegatedStakepoolInfo.title": "Stake pool delegated",
   "components.delegationsummary.delegatedStakepoolInfo.unknownPool": "Unknown pool",
@@ -104,7 +104,7 @@
   "nft.navigation.search": "Search NFT",
   "components.common.navigation.nftGallery": "NFT Gallery",
   "components.receive.addressmodal.BIP32path": "Derivation path",
-  "components.receive.addressmodal.copiedLabel": "Copied",
+  "components.receive.addressmodal.copiedLabel": "Αντιγράφηκε",
   "components.receive.addressmodal.copyLabel": "Copy address",
   "components.receive.addressmodal.spendingKeyHash": "Spending key hash",
   "components.receive.addressmodal.stakingKeyHash": "Staking key hash",
@@ -131,7 +131,6 @@
   "components.send.assetselectorscreen.youHave": "You have",
   "components.send.assetselectorscreen.noAssetsAddedYet": "No {fungible} added yet",
   "components.send.addressreaderqr.title": "Scan QR code address",
-  "components.send.addressreaderqr.text": "Scan recipients QR code to add a wallet address",
   "components.send.amountfield.label": "Amount",
   "components.send.editamountscreen.title": "Asset amount",
   "components.send.memofield.label": "Memo",
@@ -143,14 +142,14 @@
   "components.send.biometricauthscreen.SENSOR_LOCKOUT_PERMANENT": "Your biometrics sensor has been permanently locked. Use an alternate login method.",
   "components.send.biometricauthscreen.UNKNOWN_ERROR": "Something went wrong, try again later. Check your app settings.",
   "components.send.biometricauthscreen.authorizeOperation": "Authorize operation",
-  "components.send.biometricauthscreen.cancelButton": "Cancel",
+  "components.send.biometricauthscreen.cancelButton": "Ακύρωση",
   "components.send.biometricauthscreen.headings1": "Authorize with your",
   "components.send.biometricauthscreen.headings2": "biometrics",
   "components.send.biometricauthscreen.useFallbackButton": "Use other login method",
   "components.send.confirmscreen.amount": "Amount",
   "components.send.confirmscreen.balanceAfterTx": "Balance after transaction",
   "components.send.confirmscreen.beforeConfirm": "Before tapping on confirm, please follow these instructions:",
-  "components.send.confirmscreen.confirmButton": "Confirm",
+  "components.send.confirmscreen.confirmButton": "Επιβεβαίωση",
   "components.send.confirmscreen.fees": "Fees",
   "components.send.confirmscreen.password": "Spending password",
   "components.send.confirmscreen.receiver": "Receiver",
@@ -160,13 +159,13 @@
   "components.send.sendscreen.addressInputErrorInvalidAddress": "Please enter a valid address",
   "components.send.sendscreen.addressInputLabel": "Address",
   "components.send.sendscreen.amountInput.error.assetOverflow": "Maximum value of a token inside a UTXO exceeded (overflow).",
-  "components.send.sendscreen.amountInput.error.INVALID_AMOUNT": "Please enter a valid amount",
+  "components.send.sendscreen.amountInput.error.INVALID_AMOUNT": "Παρακαλώ εισάγετε ένα σωστό ποσό",
   "components.send.sendscreen.amountInput.error.LT_MIN_UTXO": "Cannot send less than {minUtxo} {ticker}",
   "components.send.sendscreen.amountInput.error.NEGATIVE": "Amount must be positive",
   "components.send.sendscreen.amountInput.error.TOO_LARGE": "Amount too large",
   "components.send.sendscreen.amountInput.error.TOO_LOW": "Amount is too low",
-  "components.send.sendscreen.amountInput.error.TOO_MANY_DECIMAL_PLACES": "Please enter a valid amount",
-  "components.send.sendscreen.amountInput.error.insufficientBalance": "Not enough funds to make this transaction",
+  "components.send.sendscreen.amountInput.error.TOO_MANY_DECIMAL_PLACES": "Παρακαλώ εισάγετε ένα σωστό ποσό",
+  "components.send.sendscreen.amountInput.error.insufficientBalance": "Δεν υπάρχουν αρκετά χρήματα για να κάνετε αυτή τη συναλλαγή",
   "components.send.sendscreen.availableFundsBannerIsFetching": "Checking balance...",
   "components.send.sendscreen.availableFundsBannerNotAvailable": "-",
   "components.send.sendscreen.balanceAfterLabel": "Balance after",
@@ -174,7 +173,7 @@
   "components.send.sendscreen.checkboxLabel": "Send full balance",
   "components.send.sendscreen.checkboxSendAllAssets": "Send all assets (including all tokens)",
   "components.send.sendscreen.checkboxSendAll": "Send all {assetId}",
-  "components.send.sendscreen.continueButton": "Continue",
+  "components.send.sendscreen.continueButton": "Συνέχεια",
   "components.send.sendscreen.domainNotRegisteredError": "Domain is not registered",
   "components.send.sendscreen.domainRecordNotFoundError": "No Cardano record found for this domain",
   "components.send.sendscreen.domainUnsupportedError": "Domain is not supported",
@@ -191,12 +190,6 @@
   "components.send.sendscreen.sendAllWarningAlert2": "All your tokens, including NFTs and any other native assets in your wallet, will also be transferred in this transaction.",
   "components.send.sendscreen.sendAllWarningAlert3": "After you confirm the transaction in the next screen, your wallet will be emptied.",
   "components.send.sendscreen.title": "Send",
-  "components.send.sendscreen.submittedTxTitle": "Transaction submitted",
-  "components.send.sendscreen.submittedTxText": "Check this transaction in the list of wallet transactions",
-  "components.send.sendscreen.submittedTxButton": "Go to transactions",
-  "components.send.sendscreen.failedTxTitle": "Transaction failed",
-  "components.send.sendscreen.failedTxText": "Your transaction has not been processed properly due to technical issues",
-  "components.send.sendscreen.failedTxButton": "Try again",
   "components.settings.applicationsettingsscreen.biometricsSignIn": "Sign in with your biometrics",
   "components.settings.applicationsettingsscreen.changePin": "Change PIN",
   "components.settings.applicationsettingsscreen.commit": "Commit:",
@@ -208,9 +201,9 @@
   "components.settings.applicationsettingsscreen.security": "Security",
   "components.settings.applicationsettingsscreen.support": "Support",
   "components.settings.applicationsettingsscreen.tabTitle": "Application",
-  "components.settings.applicationsettingsscreen.termsOfUse": "Terms of Use",
+  "components.settings.applicationsettingsscreen.termsOfUse": "Όροι Χρήσης",
   "components.settings.applicationsettingsscreen.title": "Settings",
-  "components.settings.applicationsettingsscreen.version": "Current version:",
+  "components.settings.applicationsettingsscreen.version": "Τρέχουσα έκδοση:",
   "components.settings.biometricslinkscreen.enableFingerprintsMessage": "Enable use of fingerprints in device settings first!",
   "components.settings.biometricslinkscreen.heading": "Use your device biometrics",
   "components.settings.biometricslinkscreen.linkButton": "Link",
@@ -244,7 +237,7 @@
   "components.settings.settingsscreen.faqLabel": "See frequently asked questions",
   "components.settings.settingsscreen.faqUrl": "https://yoroi-wallet.com/faq/",
   "components.settings.settingsscreen.reportDescription": "If the FAQ does not solve the issue you are experiencing, please use our Support request feature.",
-  "components.settings.settingsscreen.reportLabel": "Report a problem",
+  "components.settings.settingsscreen.reportLabel": "Αναφορά προβλήματος",
   "components.settings.settingsscreen.reportUrl": "https://yoroi-wallet.com/support/",
   "components.settings.settingsscreen.title": "Support",
   "components.settings.termsofservicescreen.title": "Terms of Service Agreement",
@@ -266,7 +259,7 @@
   "components.settings.walletsettingscreen.security": "Security",
   "components.settings.walletsettingscreen.shelleyWallet": "Shelley-era wallet",
   "components.settings.walletsettingscreen.switchWallet": "Switch wallet",
-  "components.settings.walletsettingscreen.tabTitle": "Wallet",
+  "components.settings.walletsettingscreen.tabTitle": "Πορτοφόλι",
   "components.settings.walletsettingscreen.title": "Settings",
   "components.settings.walletsettingscreen.walletName": "Wallet name",
   "components.settings.walletsettingscreen.walletType": "Wallet type:",
@@ -294,7 +287,7 @@
   "components.txhistory.flawedwalletmodal.title": "Warning",
   "components.txhistory.flawedwalletmodal.explanation1": "It looks like you have accidentally created or restored a wallet that is only included in special versions for development. As a security measure, we have disabled this wallet.",
   "components.txhistory.flawedwalletmodal.explanation2": "You still can create a new wallet or restore one without restrictions. If you were affected in some way by this issue, please contact EMURGO.",
-  "components.txhistory.flawedwalletmodal.okButton": "I understand",
+  "components.txhistory.flawedwalletmodal.okButton": "Καταλαβαίνω",
   "components.txhistory.txdetails.addressPrefixChange": "/change",
   "components.txhistory.txdetails.addressPrefixNotMine": "not mine",
   "components.txhistory.txdetails.addressPrefixReceive": "/{idx}",
@@ -343,7 +336,7 @@
   "components.walletinit.connectnanox.savenanoxscreen.title": "Save wallet",
   "components.walletinit.createwallet.createwalletscreen.title": "Create a new wallet",
   "components.walletinit.createwallet.createwalletscreen.passwordLengthRequirement": "Minimum {requiredPasswordLength} characters",
-  "components.walletinit.createwallet.mnemonicbackupimportancemodal.confirmationButton": "I understand",
+  "components.walletinit.createwallet.mnemonicbackupimportancemodal.confirmationButton": "Καταλαβαίνω",
   "components.walletinit.createwallet.mnemonicbackupimportancemodal.keysStorageCheckbox": "I understand that my secret keys are held securely on this device only, not on the company`s servers",
   "components.walletinit.createwallet.mnemonicbackupimportancemodal.newDeviceRecoveryCheckbox": "I understand that if this application is moved to another device or deleted, my funds can be only recovered with the backup phrase that I have written down and saved in a secure place.",
   "components.walletinit.createwallet.mnemonicbackupimportancemodal.title": "Recovery phrase",
@@ -418,7 +411,7 @@
   "components.walletselection.walletselectionscreen.stakeDashboardButton": "Stake Dashboard",
   "components.walletselection.walletselectionscreen.loadingWallet": "Loading wallet",
   "components.walletselection.walletselectionscreen.supportTicketLink": "Ask our support team",
-  "components.catalyst.banner.name": "Catalyst Voting Registration",
+  "components.catalyst.banner.name": "Catalyst Voting",
   "components.catalyst.catalystbackupcheckmodal.consequencesCheckbox": "I understand that if I did not save my Catalyst PIN and QR code (or secret code) I will not be able to register and vote for Catalyst proposals.",
   "components.catalyst.catalystbackupcheckmodal.qrCodeCheckbox": "I have taken a screenshot of my QR code and saved my Catalyst secret code as a fallback.",
   "components.catalyst.catalystbackupcheckmodal.pinCheckbox": "I have written down my Catalyst PIN which I obtained in previous steps.",
@@ -435,7 +428,7 @@
   "components.catalyst.step4.subTitle": "Enter Spending Password",
   "components.catalyst.step5.subTitle": "Confirm Registration",
   "components.catalyst.step5.bioAuthDescription": "Please confirm your voting registration. You will be asked to authenticate once again to sign and submit the certificate generated in the previous step.",
-  "components.catalyst.step5.description": "Enter your spending password to confirm your voting registration and submit the certificate generated in previous step to the blockchain.",
+  "components.catalyst.step5.description": "Enter the spending password to confirm voting registration and submit the certificate generated in previous step to blockchain",
   "components.catalyst.step6.subTitle": "Backup Catalyst Code",
   "components.catalyst.step6.description": "Please take a screenshot of this QR code.",
   "components.catalyst.step6.description2": "We strongly recommend you to save your Catalyst secret code in plain text too, so that you can re-create your QR code if necessary.",
@@ -452,11 +445,11 @@
   "global.actions.dialogs.biometricsChange.message": "Due to biometric changes. You need to create a PIN.",
   "global.actions.dialogs.biometricsIsTurnedOff.message": "It seems that you turned off biometrics. Please turn it on",
   "global.actions.dialogs.biometricsIsTurnedOff.title": "Biometrics was turned off",
-  "global.actions.dialogs.commonbuttons.backButton": "Back",
-  "global.actions.dialogs.commonbuttons.confirmButton": "Confirm",
-  "global.actions.dialogs.commonbuttons.continueButton": "Continue",
-  "global.actions.dialogs.commonbuttons.cancelButton": "Cancel",
-  "global.actions.dialogs.commonbuttons.iUnderstandButton": "I understand",
+  "global.actions.dialogs.commonbuttons.backButton": "Πίσω",
+  "global.actions.dialogs.commonbuttons.confirmButton": "Επιβεβαίωση",
+  "global.actions.dialogs.commonbuttons.continueButton": "Συνέχεια",
+  "global.actions.dialogs.commonbuttons.cancelButton": "Ακύρωση",
+  "global.actions.dialogs.commonbuttons.iUnderstandButton": "Καταλαβαίνω",
   "global.actions.dialogs.commonbuttons.completeButton": "Complete",
   "global.actions.dialogs.disableEasyConfirmationFirst.message": "Please disable easy confirmation function in all your wallets first",
   "global.actions.dialogs.disableEasyConfirmationFirst.title": "Action failed",
@@ -487,7 +480,7 @@
   "global.actions.dialogs.logout.title": "Logout",
   "global.actions.dialogs.logout.yesButton": "Yes",
   "global.actions.dialogs.insufficientBalance.title": "Transaction error",
-  "global.actions.dialogs.insufficientBalance.message": "Not enough funds to make this transaction",
+  "global.actions.dialogs.insufficientBalance.message": "Δεν υπάρχουν αρκετά χρήματα για να κάνετε αυτή τη συναλλαγή",
   "global.actions.dialogs.networkError.message": "Error connecting to the server. Please check your internet connection",
   "global.actions.dialogs.networkError.title": "Network error",
   "global.actions.dialogs.notSupportedError.message": "This feature is not yet supported. It will be enabled in a future release.",
