--- a/apps/wallet-mobile/translations/messages/src/components/Analytics/Analytics.json
+++ b/apps/wallet-mobile/translations/messages/src/components/Analytics/Analytics.json
@@ -1,167 +1,167 @@
 [
   {
-    "id": "components.analytics.header",
+    "id": "analytics.header",
     "defaultMessage": "!!!Join the journey to improve Yoroi",
     "file": "src/components/Analytics/Analytics.tsx",
     "start": {
-      "line": 177,
-      "column": 10,
-      "index": 4523
-    },
-    "end": {
-      "line": 180,
-      "column": 3,
-      "index": 4627
-    }
-  },
-  {
-    "id": "components.analytics.description",
-    "defaultMessage": "!!!Share user insights to help us fine tune Yoroi to better serve your needs.",
-    "file": "src/components/Analytics/Analytics.tsx",
-    "start": {
-      "line": 181,
-      "column": 15,
-      "index": 4644
-    },
-    "end": {
-      "line": 184,
-      "column": 3,
-      "index": 4794
-    }
-  },
-  {
-    "id": "components.analytics.anonymous",
-    "defaultMessage": "!!!Anonymous analytics data",
-    "file": "src/components/Analytics/Analytics.tsx",
-    "start": {
-      "line": 185,
-      "column": 13,
-      "index": 4809
-    },
-    "end": {
-      "line": 188,
-      "column": 3,
-      "index": 4907
-    }
-  },
-  {
-    "id": "components.analytics.optout",
-    "defaultMessage": "!!!You can always opt-out via Settings",
-    "file": "src/components/Analytics/Analytics.tsx",
-    "start": {
-      "line": 189,
-      "column": 10,
-      "index": 4919
-    },
-    "end": {
-      "line": 192,
-      "column": 3,
-      "index": 5025
-    }
-  },
-  {
-    "id": "components.analytics.private",
-    "defaultMessage": "!!!We <b>cannot</b> access private keys",
-    "file": "src/components/Analytics/Analytics.tsx",
-    "start": {
       "line": 193,
-      "column": 11,
-      "index": 5038
+      "column": 10,
+      "index": 4633
     },
     "end": {
       "line": 196,
       "column": 3,
-      "index": 5146
+      "index": 4726
     }
   },
   {
-    "id": "components.analytics.noip",
-    "defaultMessage": "!!!We <b>are not</b> recording IP addresses",
+    "id": "analytics.description",
+    "defaultMessage": "!!!Share user insights to help us fine tune Yoroi to better serve your needs.",
     "file": "src/components/Analytics/Analytics.tsx",
     "start": {
       "line": 197,
-      "column": 8,
-      "index": 5156
+      "column": 15,
+      "index": 4743
     },
     "end": {
       "line": 200,
       "column": 3,
-      "index": 5265
+      "index": 4882
     }
   },
   {
-    "id": "components.analytics.nosell",
-    "defaultMessage": "!!!We <b>do not</b> sell data",
+    "id": "analytics.anonymous",
+    "defaultMessage": "!!!Anonymous analytics data",
     "file": "src/components/Analytics/Analytics.tsx",
     "start": {
       "line": 201,
-      "column": 10,
-      "index": 5277
+      "column": 13,
+      "index": 4897
     },
     "end": {
       "line": 204,
       "column": 3,
-      "index": 5374
+      "index": 4984
     }
   },
   {
-    "id": "components.analytics.more",
-    "defaultMessage": "!!!Learn more about user insights",
+    "id": "analytics.optout",
+    "defaultMessage": "!!!You can always opt-out via Settings",
     "file": "src/components/Analytics/Analytics.tsx",
     "start": {
       "line": 205,
-      "column": 8,
-      "index": 5384
+      "column": 10,
+      "index": 4996
     },
     "end": {
       "line": 208,
       "column": 3,
-      "index": 5483
+      "index": 5091
     }
   },
   {
-    "id": "components.analytics.skip",
-    "defaultMessage": "!!!Skip",
+    "id": "analytics.private",
+    "defaultMessage": "!!!We <b>cannot</b> access private keys",
     "file": "src/components/Analytics/Analytics.tsx",
     "start": {
       "line": 209,
-      "column": 8,
-      "index": 5493
+      "column": 11,
+      "index": 5104
     },
     "end": {
       "line": 212,
       "column": 3,
-      "index": 5566
+      "index": 5201
     }
   },
   {
-    "id": "components.analytics.accept",
-    "defaultMessage": "!!!Accept",
+    "id": "analytics.noip",
+    "defaultMessage": "!!!We <b>are not</b> recording IP addresses",
     "file": "src/components/Analytics/Analytics.tsx",
     "start": {
       "line": 213,
-      "column": 10,
-      "index": 5578
+      "column": 8,
+      "index": 5211
     },
     "end": {
       "line": 216,
+      "column": 3,
+      "index": 5309
+    }
+  },
+  {
+    "id": "analytics.nosell",
+    "defaultMessage": "!!!We <b>do not</b> sell data",
+    "file": "src/components/Analytics/Analytics.tsx",
+    "start": {
+      "line": 217,
+      "column": 10,
+      "index": 5321
+    },
+    "end": {
+      "line": 220,
+      "column": 3,
+      "index": 5407
+    }
+  },
+  {
+    "id": "analytics.more",
+    "defaultMessage": "!!!Learn more about user insights",
+    "file": "src/components/Analytics/Analytics.tsx",
+    "start": {
+      "line": 221,
+      "column": 8,
+      "index": 5417
+    },
+    "end": {
+      "line": 224,
+      "column": 3,
+      "index": 5505
+    }
+  },
+  {
+    "id": "analytics.skip",
+    "defaultMessage": "!!!Skip",
+    "file": "src/components/Analytics/Analytics.tsx",
+    "start": {
+      "line": 225,
+      "column": 8,
+      "index": 5515
+    },
+    "end": {
+      "line": 228,
+      "column": 3,
+      "index": 5577
+    }
+  },
+  {
+    "id": "analytics.accept",
+    "defaultMessage": "!!!Accept",
+    "file": "src/components/Analytics/Analytics.tsx",
+    "start": {
+      "line": 229,
+      "column": 10,
+      "index": 5589
+    },
+    "end": {
+      "line": 232,
       "column": 3,
       "index": 5655
     }
   },
   {
-    "id": "components.analytics.toggle",
+    "id": "analytics.toggle",
     "defaultMessage": "!!!Allow Yoroi analytics",
     "file": "src/components/Analytics/Analytics.tsx",
     "start": {
-      "line": 217,
+      "line": 233,
       "column": 10,
       "index": 5667
     },
     "end": {
-      "line": 220,
+      "line": 236,
       "column": 3,
-      "index": 5759
+      "index": 5748
     }
   }
 ]
